--- a/v1.html
+++ b/v1.html
@@ -491,7 +491,7 @@
 
 <section class="section" style="margin-top: 0rem;">
   <div class="container is-max-desktop" style="display: flex; flex-wrap: wrap; width: 100%;">
-    <div style="display: flex; height: 100vh; justify-content: center; width: 100%; margin-bottom: 0;">
+    <div style="display: flex; height: 100%; justify-content: center; width: 60vh; margin-bottom: 0;">
       <div class="prompt-wrap full-screen-wrap" style="position: relative; flex: 1;">
           <div class="loading-placeholder">
               <div class="loading-text">Loading...</div>
@@ -534,7 +534,7 @@
       </div>
     </div>
 
-    <div style="display: flex; height: 100vh; justify-content: center; width: 100%; margin-top: 0;">
+    <div style="display: flex; height: 100%; justify-content: center; width: 60vh; margin-top: 0;">
       <div class="prompt-wrap full-screen-wrap" style="position: relative; flex: 1;">
           <div class="loading-placeholder">
               <div class="loading-text">Loading...</div>
@@ -578,7 +578,7 @@
     </div>
 
 
-    <div style="display: flex; height: 100vh; justify-content: center; width: 100%; margin-top: 0;">
+    <div style="display: flex; height: 100%; justify-content: center; width: 60vh; margin-top: 0;">
       <div class="prompt-wrap full-screen-wrap" style="position: relative; flex: 1;">
           <div class="loading-placeholder">
               <div class="loading-text">Loading...</div>
