--- a/v3.html
+++ b/v3.html
@@ -319,11 +319,11 @@
 <section class="section" style="margin-top: 10rem;">
   <div class="container is-max-desktop" style="width: 100%;">
     <div class="column has-text-centered" style="margin-top: 14rem;">
-    <h2 class="title is-1 publication-title mb-1" style="background: transparent !important; text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.8); color: white; text-align: center;">Comparison between FuLi AI and Other models </h2>
+    <h2 class="title is-1 publication-title mb-1" style="background: transparent !important; text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.8); color: white; text-align: center;">FuLi AI (Video Soft Editing) </h2>
     <div class="spacer"></div>
 
     <!-- 统一视频容器结构 -->
-    <div style="display: flex; height: 50vh; width: 100%; margin-bottom: 2rem;">
+    <div style="display: flex; height: 60vh; width: 100%; margin-bottom: 2rem;">
       <div class="video-container" style="flex: 1; position: relative; display: flex; justify-content: center; align-items: center;">
         <div class="loading-placeholder" style="position: absolute;">
           <div class="loading-text">Loading...</div>
@@ -337,7 +337,7 @@
       </div>
     </div>
 
-    <div style="display: flex; height: 50vh; width: 100%; margin-bottom: 2rem;">
+    <div style="display: flex; height: 60vh; width: 100%; margin-bottom: 2rem;">
       <div class="video-container" style="flex: 1; position: relative; display: flex; justify-content: center; align-items: center;">
         <div class="loading-placeholder" style="position: absolute;">
           <div class="loading-text">Loading...</div>
@@ -351,7 +351,7 @@
       </div>
     </div>
 
-    <div style="display: flex; height: 50vh; width: 100%; margin-bottom: 2rem;">
+    <div style="display: flex; height: 60vh; width: 100%; margin-bottom: 2rem;">
       <div class="video-container" style="flex: 1; position: relative; display: flex; justify-content: center; align-items: center;">
         <div class="loading-placeholder" style="position: absolute;">
           <div class="loading-text">Loading...</div>
@@ -367,7 +367,7 @@
 
   
 
-    <div style="display: flex; height: 50vh; width: 100%; margin-bottom: 2rem;">
+    <div style="display: flex; height: 60vh; width: 100%; margin-bottom: 2rem;">
       <div class="video-container" style="flex: 1; position: relative; display: flex; justify-content: center; align-items: center;">
         <div class="loading-placeholder" style="position: absolute;">
           <div class="loading-text">Loading...</div>
@@ -381,7 +381,7 @@
       </div>
     </div>
 
-    <div style="display: flex; height: 50vh; width: 100%; margin-bottom: 2rem;">
+    <div style="display: flex; height: 60vh; width: 100%; margin-bottom: 2rem;">
       <div class="video-container" style="flex: 1; position: relative; display: flex; justify-content: center; align-items: center;">
         <div class="loading-placeholder" style="position: absolute;">
           <div class="loading-text">Loading...</div>
@@ -396,7 +396,7 @@
     </div>
 
 
-    <div style="display: flex; height: 50vh; width: 100%; margin-bottom: 2rem;">
+    <div style="display: flex; height: 60vh; width: 100%; margin-bottom: 2rem;">
       <div class="video-container" style="flex: 1; position: relative; display: flex; justify-content: center; align-items: center;">
         <div class="loading-placeholder" style="position: absolute;">
           <div class="loading-text">Loading...</div>
