--- a/v3.html
+++ b/v3.html
@@ -437,7 +437,7 @@
 <section class="section" style="margin-top: 10rem;">
   <div class="container is-max-desktop" style="width: 100%;">
     <div class="column has-text-centered" style="margin-top: 14rem;">
-    <h2 class="title is-1 publication-title mb-1" style="background: transparent !important; text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.8); color: white; text-align: center;">FuLi AI (Video Soft Editing) </h2>
+    <h2 class="title is-1 publication-title mb-1" style="background: transparent !important; text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.8); color: white; text-align: center;">FuLi AI (Animate) </h2>
     <div class="spacer"></div>
 
     <!-- 统一视频容器结构 -->
